# misskey-weather-bot-2

./: LICENSE.md  README.md
.github/workflows/: deploy-lambda-prod.yml  deploy-lambda-sandbox.yml  deploy-lambda.yml
terraform/: README.md
terraform/env/prod/: .terraform.lock.hcl  info.tf  main.tf  outputs.tf  providers.tf
terraform/env/sandbox/: info.tf  main.tf  providers.tf
terraform/modules/account_info/: outputs.tf
terraform/modules/github_actions/: main.tf  outputs.tf  variables.tf
terraform/modules/weather_forecast_bot/: main.tf  outputs.tf  variables.tf
terraform/modules/weather_forecast_bot/cloudwatch/: main.tf  outputs.tf
terraform/modules/weather_forecast_bot/ecr/: main.tf  outputs.tf  push_temp_image.sh  variables.tf
terraform/modules/weather_forecast_bot/eventbridge/: main.tf  variables.tf
terraform/modules/weather_forecast_bot/iam/: main.tf  variables.tf
terraform/modules/weather_forecast_bot/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/weather_forecast_bot/ssm/: main.tf  outputs.tf
weather-bot/: Cargo.toml  Dockerfile  README.md  run_locally.sh
weather-bot/Data/: weather_conditions.csv
weather-bot/src/: aws.rs  main.rs  weather_api_client.rs
weather-bot/src/aws/: config.rs  ssm.rs
weather-bot/src/config/: main.rs
weather-bot/src/emoji_converter/: main.rs
weather-bot/src/misskey/: main.rs
weather-bot/src/misskey_client/: entity.rs  main.rs
weather-bot/src/note_text_generator/: main.rs
weather-bot/src/weather_api_client/: main.rs  response.rs
