[package]
name = "weather-bot"
version = "0.1.0"
edition = "2024"

[features]
default = []
local = []

[dependencies]
polars = { version = "0.53.0", features = ["lazy", "csv"] }
thiserror = "2.0.18"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.228"
clap = { version = "4.6.0", features = ["derive"] }
aws-config = "1"
aws-sdk-ssm = "1"
env_logger = "0.11.10"
log = "0.4.29"
indoc = "2.0.7"
lambda_runtime = "1.1.2"
serde_json = "1.0.149"

[dev-dependencies]
once_cell = "1.21.4"
serial_test = "3.4.0"
